# indexscraper

./: LICENSE.txt  README.md  pyproject.toml
indexweights/: __init__.py  html_getter.py  index_weight.py  nasdaq.py  slickcharts.py
